--force-open-all-module-packages