@@ -33,6 +33,7 @@ import java.util.Objects;
 import jdk.internal.HotSpotIntrinsicCandidate;
 import jdk.internal.misc.SharedSecrets;
 import jdk.internal.misc.VM;
+import jdk.internal.module.InternalUseReporter;
 import sun.security.action.GetPropertyAction;
 
 /** Common utility routines used by both java.lang and
@@ -201,26 +202,33 @@ public class Reflection {
      */
     public static boolean verifyModuleAccess(Class<?> currentClass,
                                              Class<?> memberClass) {
-        return verifyModuleAccess(currentClass.getModule(), memberClass);
+        Module currentModule = currentClass.getModule();
+        Module memberModule = memberClass.getModule();
+        boolean allowed = verifyModuleAccess(currentModule, memberClass);
+
+        // print stack trace if exported via --add-exports (or --add-opens)
+        if (allowed && memberModule != null) {
+            InternalUseReporter reporter = InternalUseReporter.internalUseReporter();
+            if (reporter != null
+                && reporter.isExportedByBackdoor(memberModule,
+                                                 memberClass.getPackageName(),
+                                                 currentModule)) {
+                String msg = "allowed access to member of " + memberClass;
+                reporter.printStack(currentClass, msg);
+            }
+        }
+
+        return allowed;
     }
 
     public static boolean verifyModuleAccess(Module currentModule, Class<?> memberClass) {
         Module memberModule = memberClass.getModule();
-
-        // module may be null during startup (initLevel 0)
-        if (currentModule == memberModule)
-           return true;  // same module (named or unnamed)
-
-        String pkg = memberClass.getPackageName();
-        boolean allowed = memberModule.isExported(pkg, currentModule);
-        if (allowed && memberModule.isNamed() && printStackTraceWhenAccessSucceeds()) {
-            if (!SharedSecrets.getJavaLangReflectModuleAccess()
-                    .isStaticallyExported(memberModule, pkg, currentModule)) {
-                String msg = currentModule + " allowed access to member of " + memberClass;
-                new Exception(msg).printStackTrace(System.err);
-            }
+        if (currentModule == memberModule) {
+            return true;  // same module (named or unnamed)
+        } else {
+            String pkg = memberClass.getPackageName();
+            return memberModule.isExported(pkg, currentModule);
         }
-        return allowed;
     }
 
     /**
@@ -348,9 +356,6 @@ public class Reflection {
     // true to print a stack trace when access fails
     private static volatile boolean printStackWhenAccessFails;
 
-    // true to print a stack trace when access succeeds
-    private static volatile boolean printStackWhenAccessSucceeds;
-
     // true if printStack* values are initialized
     private static volatile boolean printStackPropertiesSet;
 
@@ -360,7 +365,6 @@ public class Reflection {
                     "sun.reflect.debugModuleAccessChecks");
             if (s != null) {
                 printStackWhenAccessFails = !s.equalsIgnoreCase("false");
-                printStackWhenAccessSucceeds = s.equalsIgnoreCase("access");
             }
             printStackPropertiesSet = true;
         }
@@ -371,13 +375,8 @@ public class Reflection {
         return printStackWhenAccessFails;
     }
 
-    public static boolean printStackTraceWhenAccessSucceeds() {
-        ensurePrintStackPropertiesSet();
-        return printStackWhenAccessSucceeds;
-    }
-
     /**
-     * Throws IllegalAccessException with the an exception message based on
+     * Throws IllegalAccessException with an exception message based on
      * the access that is denied.
      */
     private static void throwIllegalAccessException(Class<?> currentClass,
